fixed navbar adn add dark mode

--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,14 @@
   @apply font-poppins;
 }
 
-.nactive {
-  @apply left-0;
+.menu-active {
+  @apply right-0;
+}
+
+.menu-unactive {
+  @apply -right-96;
+}
+
+.card-hover {
+@apply hover:scale-105 duration-300 ease-in-out;
 }
